[gd_scene load_steps=4 format=3 uid="uid://bbmbpj31n8dea"]

[ext_resource type="Script" path="res://MainScene.gd" id="1_h7nld"]
[ext_resource type="PackedScene" uid="uid://cmk1a2a8fxnu" path="res://Pillar.tscn" id="2_8eydq"]

[sub_resource type="QuadMesh" id="QuadMesh_u634v"]

[node name="Main" type="Node3D"]
script = ExtResource("1_h7nld")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.244681, 0.969604, 0, -0.969604, -0.244681, 0, 47.6593, -53.8035)
light_color = Color(0.838857, 1, 0.632735, 1)
light_energy = 0.934
light_indirect_energy = 1.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(100, 0, 0, 0, -4.37114e-06, 100, 0, -100, -4.37114e-06, 0, 0, 0)
mesh = SubResource("QuadMesh_u634v")

[node name="Menu" type="MenuBar" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Join" type="Button" parent="Menu"]
layout_mode = 0
offset_left = -1.0
offset_top = 36.0
offset_right = 48.0
offset_bottom = 67.0
text = "Join"

[node name="Host" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 51.0
offset_bottom = 29.0
text = "Host"

[node name="Port" type="LineEdit" parent="Menu"]
layout_mode = 0
offset_left = 196.0
offset_top = 35.0
offset_right = 263.062
offset_bottom = 66.0
text = "9999"
placeholder_text = "Port"

[node name="IP" type="LineEdit" parent="Menu"]
layout_mode = 0
offset_left = 59.0
offset_top = 36.0
offset_right = 186.0
offset_bottom = 67.0
text = "127.0.0.1"
placeholder_text = "IP"

[node name="IPLabel" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 67.0
offset_top = 3.0
offset_right = 193.0
offset_bottom = 26.0

[node name="HostList" type="ItemList" parent="Menu"]
layout_mode = 0
offset_left = 284.0
offset_top = 8.0
offset_right = 399.0
offset_bottom = 74.0

[node name="Scan" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 283.0
offset_top = 81.0
offset_right = 400.0
offset_bottom = 112.0
text = "Scan for hosts"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[node name="Pillar" parent="." instance=ExtResource("2_8eydq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.5604, 0, 0.013361)

[node name="LoadingText" type="Label" parent="."]
custom_minimum_size = Vector2(300, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Scan" to="." method="_on_scan_pressed"]
